--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.60.0",
+    "@payloadcms/next": "^3.60.0",
+    "@payloadcms/richtext-lexical": "^3.60.0",
+    "@payloadcms/richtext-slate": "^3.60.0",
+    "graphql": "^16.11.0",
     "next": "15.5.3",
+    "next-transpile-modules": "^10.0.1",
+    "payload": "^3.60.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.4",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
