--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "node --dns-result-order=ipv4first node_modules/next/dist/bin/next build",
+    "build": "NODE_TLS_REJECT_UNAUTHORIZED=0 next build",
     "start": "next start",
     "lint": "eslint"
   },
