--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@payloadcms/next": "^3.60.0",
     "@payloadcms/richtext-lexical": "^3.60.0",
     "@payloadcms/richtext-slate": "^3.60.0",
+    "@payloadcms/storage-s3": "^3.60.0",
     "graphql": "^16.11.0",
     "next": "15.5.3",
     "next-transpile-modules": "^10.0.1",
