--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "doublesystems",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx payload generate:importmap && npx next build",
+    "postbuild": "cp -r .payload .next/server/ 2>/dev/null || true",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "^3.60.0",
-    "@payloadcms/next": "^3.60.0",
-    "@payloadcms/richtext-lexical": "^3.60.0",
-    "@payloadcms/richtext-slate": "^3.60.0",
-    "@payloadcms/storage-s3": "^3.60.0",
+    "@payloadcms/db-postgres": "latest",
+    "@payloadcms/next": "latest",
+    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/storage-s3": "latest",
+    "@payloadcms/richtext-slate": "latest",
     "graphql": "^16.11.0",
     "next": "15.5.3",
     "next-transpile-modules": "^10.0.1",
-    "payload": "^3.60.0",
+    "payload": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.34.4",
