--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/storage-s3": "latest",
     "@payloadcms/richtext-slate": "latest",
+    "@payloadcms/storage-s3": "latest",
     "graphql": "^16.11.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "next-transpile-modules": "^10.0.1",
     "payload": "latest",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sharp": "^0.34.4",
     "styled-components": "^6.1.19"
   },
